file's content can be opened nowgit add .

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "shell.h": "c",
-        "cstdint": "c"
+        "cstdint": "c",
+        "disk.h": "c"
     }
 }
